Fix spacing with nav buttons

--- a/src/main.css
+++ b/src/main.css
@@ -78,7 +78,8 @@ html, body {
 }
 
 .navBarItemSpacing {
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .navBarItemIcon {
